# winpath

./: .envrc  .gitignore  README.md  entry_points.cfg  setup.cfg
.github/workflows/: pythonpackage.yml
winpath/: test_winpath.py  winpath.py
winpath/config/: .winpathrc.json
