[metadata]
name = winpath
version = attr: winpath.__version__
description = Convert Windows and POSIX path each other
long_description = file: README.md, CHANGELOG.md, LICENSE.md
keywords = path, posix, windows
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
packages = find:
scripts =
install_requires =
entry_points = file: entry_points.cfg

[options.package_data]
* = *.txt, *.rst
winpath = config/.winpathrc.json

[options.extras_require]
pdf = ReportLab>=1.2; RXP
rest = docutils>=0.3; pack ==1.1, ==1.3