[metadata]
name = winpath
version = attr: winpath.__version__
description = Convert Windows and POSIX path each other
long_description = file: README.md, CHANGELOG.md, LICENSE.md
keywords = path, posix, windows
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
packages = find:
scripts =
install_requires =
entry_points = file: entry_points.cfg

[options.package_data]
* = *.txt, *.md
winpath = config/.winpathrc.json

[options.extras_require]